# crosschain_agent

./: .gitignore  CMakeLists.txt  README.md
cross_contract/: L1CrossChainBridge.sol  L2CrossChainBridge.sol
fpm/: after_install.sh  fpm_build.sh  pre_install.sh
fpm/module/config/: agent.json
fpm/module/scripts/: cross  crossd
src/: CMakeLists.txt
src/common/: CMakeLists.txt  argument.cpp  argument.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  data_secret_key.h  general.cpp  general.h  layer1_transaction.cpp  layer1_transaction.h  layer2_transaction.cpp  layer2_transaction.h  network.cpp  network.h  network_adapter.cpp  network_adapter.h  private_key.cpp  private_key.h  web_client.cpp  web_client.h
src/daemon/: CMakeLists.txt  README.md  README_CN.md
src/daemon/src/: main.cpp
src/database/: CMakeLists.txt  consistent_writebatch.cpp  consistent_writebatch.h  database_manager.cpp  database_manager.h  database_proxy.cpp  database_proxy.h  keyvalue_db.cpp  keyvalue_db.h  rocks_db.cpp  rocks_db.h  storage.cpp  storage.h  storage_lock.cpp  storage_lock.h
src/dbtool/: CMakeLists.txt  main.cpp
src/glue/: CMakeLists.txt  handle_manager.cpp  handle_manager.h  layer1_to_layer2_handle.cpp  layer1_to_layer2_handle.h  layer2_to_layer1_handle.cpp  layer2_to_layer1_handle.h
src/main/: CMakeLists.txt  configure.cpp  configure.h  main.cpp
src/proto/: CMakeLists.txt  agent.proto  common.proto  overlay.proto  proto.cmake  subscribe.proto  transaction.proto
src/utils/: CMakeLists.txt  async_net.cpp  async_net.h  common.h  crypto.cpp  crypto.h  ecc_sm2.cpp  ecc_sm2.h  file.cpp  file.h  function_wrapper.h  headers.h  logger.cpp  logger.h  net.cpp  net.h  noncopyable.h  random.cpp  random.h  singleton.h  sm3.cpp  sm3.h  strings.h  system.cpp  system.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  timestamp.cpp  timestamp.h  utils.cpp  utils.h
src/webserver/: CMakeLists.txt  web_server.cpp  web_server.h
src/websocket/: CMakeLists.txt  layer1_websocket_client.cpp  layer1_websocket_client.h  layer2_websocket_client.cpp  layer2_websocket_client.h  websocket_client.cpp  websocket_client.h
test/unittest/: CMakeLists.txt
test/unittest/common/: layer1_transaction_test.cpp  private_key_test.cpp  strings_test.cpp  web_client_test.cpp
test/unittest/main/: CMakeLists.txt  main.cpp
